--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-rate-limit": "^7.5.1",
     "express-validator": "^7.2.1",
     "firebase-admin": "^13.4.0",
+    "framer-motion": "^12.23.6",
     "giphy-api": "^2.0.2",
     "helmet": "^8.1.0",
     "ioredis": "^5.6.1",
@@ -34,8 +35,8 @@
     "nodemailer": "^7.0.4",
     "openai": "^5.8.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
     "react-audio-voice-recorder": "^2.2.0",
+    "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.59.0",
     "react-hot-toast": "^2.5.2",
